--- a/metadata.yaml
+++ b/metadata.yaml
@@ -15,7 +15,7 @@ sources:
     url: https://dommusikarchiv.martinus.at/site/werkverzeichnis/gallery/992.html
     license: public domain
     principal: true
-imslp:
+imslp: Vesperae_(A-Ed_G_132)_(Fuchs,_Johann_Nepomuk_@Esterházy_court_composer^)
 parts:
   cl1: Clarinetto I in \flat B/C
   cl2: Clarinetto II in \flat B/C
